--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       REACT_APP_GOOGLE_AUTH_URL: http://localhost:3001/api/auth/google
   api:
     image: node:8.11.3
-    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; npm run dev'
+    command: npm run dev
     working_dir: /usr/src/app
     volumes:
       - ./api:/usr/src/app
