Add code coverage to circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           command: |
             cd api
             set -ou pipefail
-            npm run test
+            npm run test-coverage
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
