--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,19 @@ jobs:
             cd api
             set -ou pipefail
             npm run test-coverage
+      - run:
+          name: Run generator and client tests
+          environment:
+            NODE_ENV: ci
+          command: |
+            if [ "${GENERATOR_ENABLED}" == "true" ]; then
+              set -ou pipefail
+              npm i
+              npm run generator
+              cd client
+              npm i
+              npm run test-coverage
+            fi
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
