Improve authentication providers handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,14 +31,14 @@ services:
       DB_CONN_PASSWORD: password
       DB_CONN_PORT: 5432
       DB_CONN_USER: user
-      GOOGLE_ID: YOUR_APP_GOOGLE_ID
-      GOOGLE_SECRET: YOUR_APP_GOOGLE_SECRET
+      FACEBOOK_ID: FACEBOOK_ID
+      FACEBOOK_SECRET: FACEBOOK_SECRET
+      GOOGLE_ID: GOOGLE_ID
+      GOOGLE_SECRET: GOOGLE_SECRET
+      LINKEDIN_ID: LINKEDIN_ID
+      LINKEDIN_SECRET: LINKEDIN_SECRET
       GOOGLE_CALLBACK_URL: http://localhost:3001/api/auth/google/callback
-      FACEBOOK_ID: YOUR_APP_FACEBOOK_ID
-      FACEBOOK_SECRET: YOUR_APP_FACEBOOK_SECRET
       FACEBOOK_CALLBACK_URL: http://localhost:3001/api/auth/facebook/callback
-      LINKEDIN_ID: YOUR_APP_LINKEDIN_ID
-      LINKEDIN_SECRET: YOUR_APP_LINKEDIN_SECRET
       LINKEDIN_CALLBACK_URL: http://localhost:3001/api/auth/linkedin/callback
       SUCCESS_LOGIN_REDIRECT_URL: http://localhost:3000/connect
       NODE_ENV: development
