--- a/generator/package.json
+++ b/generator/package.json
@@ -2,17 +2,24 @@
   "name": "aeboilerplate-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "generator-runner.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "create": "npm i && node ./generator-runner.js"
+    "create": "ts-node ./src/index.ts"
   },
   "author": "ae",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.3.2",
-    "create-react-app": "^2.0.4",
+    "colors": "^1.3.3",
+    "create-react-app": "^2.1.8",
     "recursive-readdir": "^2.2.2",
-    "replace-in-file": "^3.4.2",
-    "shelljs": "^0.8.2"
+    "replace-in-file": "^3.4.4",
+    "shelljs": "^0.8.3"
+  },
+  "devDependencies": {
+    "@types/colors": "^1.2.1",
+    "@types/recursive-readdir": "^2.2.0",
+    "@types/shelljs": "^0.8.4",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.2"
   }
 }
