--- a/generator/resources/tsconfig.json
+++ b/generator/resources/tsconfig.json
@@ -12,7 +12,9 @@
     "forceConsistentCasingInFileNames": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "baseUrl": "."
+    "strict": false,
+    "allowSyntheticDefaultImports": false,
+    "noImplicitAny": false
   },
   "exclude": ["node_modules", "build", "scripts", "webpack", "__mocks__"]
 }
