Update boilerplate to use create-react-app 3

--- a/generator/resources/tsconfig.json
+++ b/generator/resources/tsconfig.json
@@ -12,7 +12,8 @@
     "forceConsistentCasingInFileNames": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "baseUrl": "."
+    "strict": false,
+    "baseUrl": "./src"
   },
   "exclude": ["node_modules", "build", "scripts", "webpack", "__mocks__"]
 }
