--- a/package.json
+++ b/package.json
@@ -4,25 +4,29 @@
   "description": "AEboilerplate is an opinionated boilerplate that creates a full-stack React/Node Typescript project, with independent client and API structures in the same repository, ready to run and deploy with a neat and tidy base.",
   "scripts": {
     "\n# AEboilerplate commands": "",
-    "aeboilerplate": "npm i && rimraf .git && npm run api-npm-i && npm run stop-containers && npm run generator && rimraf generator",
+    "aeboilerplate": "npm i && rimraf .git && npm run api-npm i && npm run docker-stop && npm run generator && rimraf generator",
     "generator": "cd generator && npm run create && cd ../client && prettier --write */*.tsx --loglevel silent",
     "\n# API commands": "",
     "build-api": "cd api && npm i",
-    "api-npm-i": "cd api && docker-compose run --rm api npm i",
+    "api-npm": "docker-compose run --rm api npm",
     "api-start": "cd api && docker-compose up",
     "api-test-watch": "cd api && docker-compose -f docker-compose.tests-services.yml up --remove-orphans",
+    "atw": "npm run api-test-watch",
     "migrate": "cd api && npm run migrate",
     "seed": "cd api && npm run seed",
     "\n# Client commands": "",
     "build-client": "cd client && npm i --only=dev && npm i && npm run build",
     "client-npm-i-sass": "docker-compose run --rm site npm i node-sass",
-    "client-npm-i": "docker-compose run --rm site npm i",
+    "client-npm": "docker-compose run --rm site npm",
     "client-test": "cd client && npm run test",
+    "ctw": "npm run client-test",
     "\n# Container commands": "",
-    "stop-containers": "docker-compose stop",
-    "show-containers": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
-    "stop-all-containers": "docker stop $(docker ps -q) || true && docker rm $(docker ps -aq) || true",
-    "prune-docker-network": "docker network prune",
+    "docker-stop": "docker-compose stop",
+    "docker-ps": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
+    "dps": "npm run docker-ps",
+    "docker-stop-all": "docker stop $(docker ps -q) || true && docker rm $(docker ps -aq) || true",
+    "dsa": "npm run docker-stop-all",
+    "docker-prune-network": "docker network prune",
     "\n# General commands": "After executing the `npm run aeboilerplate` command, run `npm build && npm start` to use the built version",
     "install-dependencies": "npm i && npm run client-npm-i && npm run api-npm-i && npm run stop-containers",
     "build": "npm i && npm run build-client && npm run build-api",
