--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,8 @@ jobs:
               npm i
               npm run generator
               cd client
+              rm -rf node_modules
+              cat package.json
               npm i
               npm run test-coverage
             fi
